//
// Copyright 2014 Midokura SARL
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

package org.midonet.cluster.models;
option java_package = "org.midonet.cluster.models";
option java_outer_classname = "Commons";

enum IPVersion {
    V4 = 1;
    V6 = 2;
}

message UUID {
    required uint64 msb = 1;
    required uint64 lsb = 2;
}

message IPAddress {
    required IPVersion version = 1;
    required string address = 2;
}

message IPSubnet {
    required IPVersion version = 1;
    optional string address = 2;
    optional uint32 prefix_length = 3;
}

message Int32Range {
    optional int32 start = 1;
    optional int32 end = 2;
}

enum RuleDirection {
    EGRESS = 0;
    INGRESS = 1;
}

enum EtherType {
    ARP = 2054;    // 0x0806
    IPV4 = 2048;   // 0x0800
    IPV6 = 34525;  // 0x86dd
}

enum Protocol {
    TCP = 6;      // 0x6
    UDP = 17;     // 0x11
    ICMP = 1;     // 0x1
    ICMPV6 = 58;  // 0x3a
}
